[project]
name = "cinesage-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mistralai>=1.1.5",
    "mistralai>=2.5.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
